fixed spacing

--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ li {
 }
 
 .reset_ button {
-  width: 200px;
+  width: 190px;
   height: 50px;
   border: none;
   border-radius: 10px;
